Fixed YAML options to ensure that document will knit properly.

--- a/vignettes/basic-usage.Rmd
+++ b/vignettes/basic-usage.Rmd
@@ -2,8 +2,9 @@
 title: "Basic Usage"
 author: "Vignette Author"
 date: "`r Sys.Date()`"
-output: rmarkdown::html_vignette:
-  fig_caption: yes
+output: 
+  rmarkdown::html_vignette:
+    fig_caption: yes
 vignette: >
   %\VignetteIndexEntry{Basic Usage}
   %\VignetteEngine{knitr::rmarkdown}
