Adjust the sel_plot function to only use forward slashes in `fig_output_dir` and handle both the case where the knitr 'fig.path' option ends in a slash and the case where it doesn't end in a slash.

--- a/sel_plot_tests.Rmd
+++ b/sel_plot_tests.Rmd
@@ -54,6 +54,13 @@ sel_plot <- function(sel_id = "ts_1",
   # Use this directory if the user doesn't specify a directory to be used instead.
   if (is.null(fig_output_dir)) {
     fig_output_dir <- knitr::opts_chunk$get()$fig.path
+    fig_output_dir <- gsub(x = fig_output_dir,
+                           pattern = "\\\\+", replacement = "/")
+    if (grepl(x = fig_output_dir, pattern = "(/+)|(\\\\+)$")) {
+      fig_output_dir <- gsub(pattern = "(/+)|(\\\\+)$", replacement = "",
+                             x = fig_output_dir,
+                             fixed = FALSE)
+    }
   }
   
   # If the user hasn't specified options for figure appearance,
@@ -97,7 +104,8 @@ sel_plot <- function(sel_id = "ts_1",
   
   # Create an image file for each plot,
   # saving each image file into the fig_output_dir.
-  filepaths <- paste0(fig_output_dir,
+  
+  filepaths <- paste0(fig_output_dir, "/",
                       names(options),
                       ".", 
                       dev)
