--- a/vignettes/basic-usage.Rmd
+++ b/vignettes/basic-usage.Rmd
@@ -12,7 +12,7 @@ vignette: >
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  fig.path = "figures", fig.width = 6, fig.height = 3.5, dev = 'png', dpi = 320
+  fig.width = 6, fig.height = 3.5, dev = 'png', dpi = 320
 )
 ```
 
